# BWA177

./: README.md
BWA177/: CMakeLists.txt  Doxyfile
BWA177/include/align/: alignfq.hpp  cacheOcc.hpp  calculateD.hpp  extractBWT.hpp  prealign.hpp
BWA177/include/compressfa/: compressfa.hpp  extractfa.hpp
BWA177/include/genBWT/: constructBWT.hpp
BWA177/include/genPsi/: incrementalPsi.hpp  initPsi.hpp
BWA177/include/hello/: constructBWT.hpp  constructPsi.hpp  nucleotide.hpp  test_bitvector.hpp
BWA177/include/utils/: interval.hpp  range.hpp  segment.hpp
BWA177/src/: compressfa.cpp  constructBWT.cpp  extractfa.cpp  hello.cpp  incrementalPsi.cpp  initPsi.cpp  main.cpp  prealign.cpp  range.cpp  segment.cpp
BWA177/src/align/: alignfq.cpp  cacheOcc.cpp  calculateD.cpp  extractBWT.cpp  prealign.cpp
BWA177/src/compressfa/: compressfa.cpp  extractfa.cpp
BWA177/src/genBWT/: constructBWT.cpp
BWA177/src/genPsi/: incrementalPsi.cpp  initPsi.cpp
BWA177/src/utils/: interval.cpp  range.cpp  segment.cpp
mkbwt_py/: incremental_psi.py
toy_demo/: bwa.py  ref.txt
